--- a/src/css/tail_main.css
+++ b/src/css/tail_main.css
@@ -1293,8 +1293,11 @@ html, body {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  padding-top: calc(var(--spacing) * 0.75);
+  padding-top: calc(var(--spacing) * 1.25);
   padding-right: calc(var(--spacing) * 2);
+  @media (width >= 48rem) {
+    padding-top: calc(var(--spacing) * 1);
+  }
   width: 50%;
 }
 @media (min-width: 768px) {
